@@ -1,23 +1,10 @@
-<!--
-   ____             _           _   __  ___           _       
-  / ___|___  _ __  (_) ___  ___| |_ \ \/ (_)_ __   __| | ___  
- | |   / _ \| '_ \ | |/ _ \/ __| __| \  /| | '_ \ / _` |/ _ \ 
- | |__| (_) | | | || |  __/ (__| |_  /  \| | | | | (_| |  __/ 
-  \____\___/|_| |_|/ |\___|\___|\__|/_/\_\_|_| |_|\__,_|\___| 
-                 |__/                                         
--->
-
 # ProjectISC – MegaMix 🎵✨
 
 ![Scala](https://img.shields.io/badge/Scala-2.13-red?logo=scala)
-![Build](https://img.shields.io/github/actions/workflow/status/<toi>/ProjectISC-MegaMix/ci.yml?label=build)
-![License](https://img.shields.io/github/license/<toi>/ProjectISC-MegaMix)
-![Downloads](https://img.shields.io/github/downloads/<toi>/ProjectISC-MegaMix/total)
 
-> Le jeu de rythme qui fait (vraiment) taper du pied.
 > Codé 100 % Scala + libGDX2D, for the culture.
 >
-> *« If DDR et osu! avaient un enfant polyglotte en Scala… »* – un joueur anonyme
+> *« If DDR et osu! avaient un enfant polyglotte en Scala… »* – Gontran
 
 ---
 
@@ -28,12 +15,6 @@
 * [Gameplay](#gameplay)
 * [Architecture](#architecture)
 * [Build & Run](#build--run)
-* [Features Highlight](#features-highlight)
-* [Dev Cheat‑Sheet](#dev-cheat-sheet)
-* [Benchmarks](#benchmarks)
-* [FAQ](#faq)
-* [Easter Eggs](#easter-eggs)
-* [Contribuer](#contribuer)
 * [Licence](#licence)
 
 ---
@@ -99,30 +80,7 @@ graph TD
 * **NoteLoader** : convertit ticks MIDI → positions circulaires « bullet‑hell ».
 * **guessLeadInstrument** + **InstrumentExtractor** : auto‑détection du canal solo.
 
----
-
-## Build & Run
-
-```bash
-# 1. Prérequis
-#    - JDK 8+ (OpenJDK ok)
-#    - sbt 1.x
-#    - json4s-jackson et json4s-native (résolues automatiquement par sbt via Maven Central)
-
-curl -sSf https://raw.githubusercontent.com/<toi>/ProjectISC-MegaMix/install.sh | bash  # one‑liner quickstart
-
-# ou bien :
-git clone https://github.com/<toi>/ProjectISC-MegaMix.git
-cd ProjectISC-MegaMix
-sbt run                # lance le Launcher
-```
-
-### Packaging
-
-```bash
-sbt assembly           # crée `target/scala-*/rhythm-megamix.jar`
-java -jar rhythm-megamix.jar
-```
+---`
 
 #### Dépendances Maven (extrait `build.sbt`)
 
@@ -134,77 +92,9 @@ libraryDependencies ++= Seq(
 )
 ```
 
----
-
-## Features Highlight
-
-* **🎶 Dynamic BPM synchro** : changement de tempo à la volée.
-* **🖌️ Live‑skin reload** : éditez le JSON, appuyez sur `F5`, hop ! nouveau thème.
-* **📈 WebSocket spectate** : share your gameplay live (option `--broadcast`).
-* **⏱️ Speed‑mod** : 0.5× à 2×.
-* **🌙 Dark/Light** auto (suit l’OS).
-* **📦 Plug‑in system** (SPI) pour nouvel algorithme de scoring.
-
----
-
-## Dev Cheat‑Sheet
-
-| Commande                  | Action                          |
-| ------------------------- | ------------------------------- |
-| `sbt ~run`                | Hot‑reload à chaque save        |
-| `sbt test`                | Lancer scalatest                |
-| `sbt docker:publishLocal` | Image Docker locale             |
-| `npm run storybook`       | Aperçu UI components (Scala.js) |
-
----
-
-## Benchmarks
-
-| Version                 | Avg Frame Time | GC %  | Notes              |
-| ----------------------- | -------------- | ----- | ------------------ |
-| 0.9.0 (Desktop + VSync) | 2.1 ms         | 0.4 % | Ryzen 7 + RTX 4060 |
-| 0.9.0 (Steam Deck)      | 4.8 ms         | 0.6 % | 60 FPS locked      |
-
-> Mesuré via `-Xlog:gc` + `jfr`.
-
----
-
-## FAQ
-
-<details>
-<summary>Je n’ai pas de son, help !</summary>
-Vérifie que ton périphérique par défaut sort en **44.1 kHz**. libGDX downsample mal au‑delà.
-</details>
-
-<details>
-<summary>Peut‑on jouer avec une guitare MIDI ?</summary>
-Oui ! Active l’option `--midi-device "Ma Guitare"` et mappe les frettes dans `config/midi.json`.
-</details>
-
----
-
-## Easter Eggs
-
-* Tape **↑↑↓↓←→←→BA** dans le menu principal.
-* Lance le jeu le **1ᵉʳ avril** pour un skin Rickroll.
-* Le seed pseudo‑aléatoire par défaut est `0xDEADC0DE` 😉
-
----
-
-## Contribuer
-
-1. Fork → Branch → PR.
-2. Formatage : `scalafmt`.
-3. Les assets (sprites, sons) doivent être libres de droits ou originaux.
-4. Avant merge, passe `sbt scalafmtCheck test`.
-5. Merci de documenter tout changement d’input mappings.
-
----
-
 ## Licence
 
-MIT – Fais‑en bon usage, mon reuf.
+MIT
 
 ---
 
-<small>README généré le 12 juin 2025 à l’aide de ChatGPT (OpenAI o3).</small>
